// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/password-resets/_token.vue should display message when server responses 403 Forbidden 1`] = `
<v-container-stub
  fill-height=""
  tag="div"
>
  <v-row-stub
    aligncontent="center"
    justify="center"
    nogutters="true"
    tag="div"
  >
    <v-col-stub
      cols="12"
      lg="4"
      md="5"
      sm="8"
      tag="div"
      xl="3"
    >
      <transition-stub
        mode="out-in"
        name="slide"
      >
        <div>
          <v-card-stub
            loaderheight="4"
            tag="div"
          >
            <z-card-titlebar-stub
              color="primary"
            >
              URL の有効期限が切れています
            </z-card-titlebar-stub>
            <v-card-text-stub
              tag="div"
            >
              お手数ですが、もう一度最初からお手続きください。
            </v-card-text-stub>
            <v-card-actions-stub
              tag="div"
            >
              <a
                block=""
                class="v-btn-stub"
                color="primary"
                nuxt=""
                text=""
                to="/password-resets/new"
              >
                パスワード再設定
              </a>
            </v-card-actions-stub>
          </v-card-stub>
        </div>
      </transition-stub>
    </v-col-stub>
  </v-row-stub>
</v-container-stub>
`;

exports[`pages/password-resets/_token.vue should display message when token verified 1`] = `
<v-container-stub
  fill-height=""
  tag="div"
>
  <v-row-stub
    aligncontent="center"
    justify="center"
    nogutters="true"
    tag="div"
  >
    <v-col-stub
      cols="12"
      lg="4"
      md="5"
      sm="8"
      tag="div"
      xl="3"
    >
      <transition-stub
        mode="out-in"
        name="slide"
      >
        <form
          class="v-form"
          data-form=""
          novalidate="novalidate"
        >
          <div>
            <v-card-stub
              loaderheight="4"
              tag="div"
            >
              <z-card-titlebar-stub
                color="primary"
              >
                パスワード再設定
              </z-card-titlebar-stub>
              <v-card-text-stub
                tag="div"
              >
                <p>
                  新しいパスワードを設定してください。
                </p>
                <div
                  data-password=""
                >
                  <div
                    class="v-input v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined"
                  >
                    <div
                      class="v-input__control"
                    >
                      <div
                        class="v-input__slot"
                        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                      >
                        <fieldset
                          aria-hidden="true"
                        >
                          <legend
                            style="width: 0px;"
                          >
                            <span
                              class="notranslate"
                            >
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <div
                          class="v-text-field__slot"
                        >
                          <label
                            class="v-label theme--light"
                            style="left: 0px; position: absolute;"
                          >
                            パスワード
                          </label>
                          <input
                            autofocus="autofocus"
                            type="password"
                          />
                        </div>
                        <div
                          class="v-input__append-inner"
                        >
                          <div
                            class="v-input__icon v-input__icon--append"
                          >
                            <button
                              aria-label="append icon"
                              class="v-icon notranslate v-icon--link theme--light"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="v-icon__svg"
                                role="img"
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M2,5.27L3.28,4L20,20.72L18.73,22L15.65,18.92C14.5,19.3 13.28,19.5 12,19.5C7,19.5 2.73,16.39 1,12C1.69,10.24 2.79,8.69 4.19,7.46L2,5.27M12,9A3,3 0 0,1 15,12C15,12.35 14.94,12.69 14.83,13L11,9.17C11.31,9.06 11.65,9 12,9M12,4.5C17,4.5 21.27,7.61 23,12C22.18,14.08 20.79,15.88 19,17.19L17.58,15.76C18.94,14.82 20.06,13.54 20.82,12C19.17,8.64 15.76,6.5 12,6.5C10.91,6.5 9.84,6.68 8.84,7L7.3,5.47C8.74,4.85 10.33,4.5 12,4.5M3.18,12C4.83,15.36 8.24,17.5 12,17.5C12.69,17.5 13.37,17.43 14,17.29L11.72,15C10.29,14.85 9.15,13.71 9,12.28L5.6,8.87C4.61,9.72 3.78,10.78 3.18,12Z"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                      </div>
                      <div
                        class="v-text-field__details"
                      >
                        <div
                          class="v-messages theme--light"
                        >
                          <transition-group-stub
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </v-card-text-stub>
              <v-card-actions-stub
                class="pa-4"
                tag="div"
              >
                <a
                  block=""
                  class="v-btn-stub"
                  color="primary"
                  text=""
                  type="submit"
                >
                  送信
                </a>
              </v-card-actions-stub>
            </v-card-stub>
          </div>
        </form>
      </transition-stub>
    </v-col-stub>
  </v-row-stub>
</v-container-stub>
`;

exports[`pages/password-resets/_token.vue submit should display errors when api responses bad request 1`] = `
<v-container-stub
  fill-height=""
  tag="div"
>
  <v-row-stub
    aligncontent="center"
    justify="center"
    nogutters="true"
    tag="div"
  >
    <v-col-stub
      cols="12"
      lg="4"
      md="5"
      sm="8"
      tag="div"
      xl="3"
    >
      <transition-stub
        mode="out-in"
        name="slide"
      >
        <form
          class="v-form"
          data-form=""
          novalidate="novalidate"
        >
          <div>
            <v-card-stub
              loaderheight="4"
              tag="div"
            >
              <z-card-titlebar-stub
                color="primary"
              >
                パスワード再設定
              </z-card-titlebar-stub>
              <v-card-text-stub
                tag="div"
              >
                <p>
                  新しいパスワードを設定してください。
                </p>
                <div
                  data-password=""
                >
                  <div
                    class="v-input v-input--has-state v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined error--text"
                  >
                    <div
                      class="v-input__control"
                    >
                      <div
                        class="v-input__slot"
                        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                      >
                        <fieldset
                          aria-hidden="true"
                        >
                          <legend
                            style="width: -24px;"
                          >
                            <span
                              class="notranslate"
                            >
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <div
                          class="v-text-field__slot"
                        >
                          <label
                            class="v-label v-label--active theme--light error--text"
                            style="left: 0px; position: absolute;"
                          >
                            パスワード
                          </label>
                          <input
                            autofocus="autofocus"
                            type="password"
                          />
                        </div>
                        <div
                          class="v-input__append-inner"
                        >
                          <div
                            class="v-input__icon v-input__icon--append"
                          >
                            <button
                              aria-label="append icon"
                              class="v-icon notranslate v-icon--link theme--light error--text"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="v-icon__svg"
                                role="img"
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M2,5.27L3.28,4L20,20.72L18.73,22L15.65,18.92C14.5,19.3 13.28,19.5 12,19.5C7,19.5 2.73,16.39 1,12C1.69,10.24 2.79,8.69 4.19,7.46L2,5.27M12,9A3,3 0 0,1 15,12C15,12.35 14.94,12.69 14.83,13L11,9.17C11.31,9.06 11.65,9 12,9M12,4.5C17,4.5 21.27,7.61 23,12C22.18,14.08 20.79,15.88 19,17.19L17.58,15.76C18.94,14.82 20.06,13.54 20.82,12C19.17,8.64 15.76,6.5 12,6.5C10.91,6.5 9.84,6.68 8.84,7L7.3,5.47C8.74,4.85 10.33,4.5 12,4.5M3.18,12C4.83,15.36 8.24,17.5 12,17.5C12.69,17.5 13.37,17.43 14,17.29L11.72,15C10.29,14.85 9.15,13.71 9,12.28L5.6,8.87C4.61,9.72 3.78,10.78 3.18,12Z"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                      </div>
                      <div
                        class="v-text-field__details"
                      >
                        <div
                          class="v-messages theme--light error--text"
                          role="alert"
                        >
                          <transition-group-stub
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          >
                            <div
                              class="v-messages__message"
                            >
                              パスワードを入力してください。
                            </div>
                          </transition-group-stub>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </v-card-text-stub>
              <v-card-actions-stub
                class="pa-4"
                tag="div"
              >
                <a
                  block=""
                  class="v-btn-stub"
                  color="primary"
                  text=""
                  type="submit"
                >
                  送信
                </a>
              </v-card-actions-stub>
            </v-card-stub>
          </div>
        </form>
      </transition-stub>
    </v-col-stub>
  </v-row-stub>
</v-container-stub>
`;

exports[`pages/password-resets/_token.vue submit should display message when api responses 2xx 1`] = `
<v-container-stub
  fill-height=""
  tag="div"
>
  <v-row-stub
    aligncontent="center"
    justify="center"
    nogutters="true"
    tag="div"
  >
    <v-col-stub
      cols="12"
      lg="4"
      md="5"
      sm="8"
      tag="div"
      xl="3"
    >
      <transition-stub
        mode="out-in"
        name="slide"
      >
        <div>
          <v-card-stub
            loaderheight="4"
            tag="div"
          >
            <z-card-titlebar-stub
              color="primary"
            >
              パスワード再設定
            </z-card-titlebar-stub>
            <v-card-text-stub
              tag="div"
            >
              <p>
                パスワードを設定しました。
              </p>
              <p>
                ログイン画面へ移動し、新しいパスワードでログインしてください。
              </p>
            </v-card-text-stub>
            <v-card-actions-stub
              class="pa-4"
              tag="div"
            >
              <a
                block=""
                class="v-btn-stub"
                color="primary"
                nuxt=""
                text=""
                to="/"
              >
                ログイン画面へ
              </a>
            </v-card-actions-stub>
          </v-card-stub>
        </div>
      </transition-stub>
    </v-col-stub>
  </v-row-stub>
</v-container-stub>
`;

exports[`pages/password-resets/_token.vue submit should run validation 1`] = `
<v-container-stub
  fill-height=""
  tag="div"
>
  <v-row-stub
    aligncontent="center"
    justify="center"
    nogutters="true"
    tag="div"
  >
    <v-col-stub
      cols="12"
      lg="4"
      md="5"
      sm="8"
      tag="div"
      xl="3"
    >
      <transition-stub
        mode="out-in"
        name="slide"
      >
        <form
          class="v-form"
          data-form=""
          novalidate="novalidate"
        >
          <div>
            <v-card-stub
              loaderheight="4"
              tag="div"
            >
              <z-card-titlebar-stub
                color="primary"
              >
                パスワード再設定
              </z-card-titlebar-stub>
              <v-card-text-stub
                tag="div"
              >
                <p>
                  新しいパスワードを設定してください。
                </p>
                <div
                  data-password=""
                >
                  <div
                    class="v-input v-input--has-state v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined error--text"
                  >
                    <div
                      class="v-input__control"
                    >
                      <div
                        class="v-input__slot"
                        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                      >
                        <fieldset
                          aria-hidden="true"
                        >
                          <legend
                            style="width: 0px;"
                          >
                            <span
                              class="notranslate"
                            >
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <div
                          class="v-text-field__slot"
                        >
                          <label
                            class="v-label theme--light error--text"
                            style="left: 0px; position: absolute;"
                          >
                            パスワード
                          </label>
                          <input
                            autofocus="autofocus"
                            type="password"
                          />
                        </div>
                        <div
                          class="v-input__append-inner"
                        >
                          <div
                            class="v-input__icon v-input__icon--append"
                          >
                            <button
                              aria-label="append icon"
                              class="v-icon notranslate v-icon--link theme--light error--text"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="v-icon__svg"
                                role="img"
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M2,5.27L3.28,4L20,20.72L18.73,22L15.65,18.92C14.5,19.3 13.28,19.5 12,19.5C7,19.5 2.73,16.39 1,12C1.69,10.24 2.79,8.69 4.19,7.46L2,5.27M12,9A3,3 0 0,1 15,12C15,12.35 14.94,12.69 14.83,13L11,9.17C11.31,9.06 11.65,9 12,9M12,4.5C17,4.5 21.27,7.61 23,12C22.18,14.08 20.79,15.88 19,17.19L17.58,15.76C18.94,14.82 20.06,13.54 20.82,12C19.17,8.64 15.76,6.5 12,6.5C10.91,6.5 9.84,6.68 8.84,7L7.3,5.47C8.74,4.85 10.33,4.5 12,4.5M3.18,12C4.83,15.36 8.24,17.5 12,17.5C12.69,17.5 13.37,17.43 14,17.29L11.72,15C10.29,14.85 9.15,13.71 9,12.28L5.6,8.87C4.61,9.72 3.78,10.78 3.18,12Z"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                      </div>
                      <div
                        class="v-text-field__details"
                      >
                        <div
                          class="v-messages theme--light error--text"
                          role="alert"
                        >
                          <transition-group-stub
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          >
                            <div
                              class="v-messages__message"
                            >
                              入力してください。
                            </div>
                          </transition-group-stub>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </v-card-text-stub>
              <v-card-actions-stub
                class="pa-4"
                tag="div"
              >
                <a
                  block=""
                  class="v-btn-stub"
                  color="primary"
                  text=""
                  type="submit"
                >
                  送信
                </a>
              </v-card-actions-stub>
            </v-card-stub>
          </div>
        </form>
      </transition-stub>
    </v-col-stub>
  </v-row-stub>
</v-container-stub>
`;
